--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href="/0-srodkowanie-tekstu/index.html">środkowanie tekstu w pionie i poziomie</a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
+   <ul>
+       <li class="list-item"><a href="0-srodkowanie-tekstu/index.html">środkowanie tekstu w pionie i poziomie</a></li>
+       <li class="list-item"><a href="1-srodkowanie/index.html">środkowanie elemntów</a></li>
+       <li class="list-item"><a href="2-okragly-przycisk-fa/">okrągły przycisk</a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+       <li class="list-item"><a href=""></a></li>
+   </ul>
+
 </body>
 </html>
