--- a/index.html
+++ b/index.html
@@ -1,32 +1,70 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-   <ul>
-       <li class="list-item"><a href="0-srodkowanie-tekstu/index.html">środkowanie tekstu w pionie i poziomie</a></li>
-       <li class="list-item"><a href="1-srodkowanie/index.html">środkowanie elemntów</a></li>
-       <li class="list-item"><a href="2-okragly-przycisk-fa/">okrągły przycisk</a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-       <li class="list-item"><a href=""></a></li>
-   </ul>
 
+</head>
+
+<body>
+    <ul>
+        <li class="list-item"><a href="0-srodkowanie-tekstu/index.html">środkowanie tekstu w pionie i poziomie</a></li>
+        <li class="list-item"><a href="1-srodkowanie/index.html">środkowanie elemntów</a></li>
+        <li class="list-item"><a href="2-okragly-przycisk-fa/">okrągły przycisk</a></li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+        <li class="list-item">
+            <a href=""></a>
+        </li>
+    </ul>
+    
 </body>
+
 </html>
