--- a/index.html
+++ b/index.html
@@ -6,65 +6,143 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-    <ul>
-        <li class="list-item"><a href="0-srodkowanie-tekstu/index.html">środkowanie tekstu w pionie i poziomie</a></li>
-        <li class="list-item"><a href="1-srodkowanie/index.html">środkowanie elemntów</a></li>
-        <li class="list-item"><a href="2-okragly-przycisk-fa/">okrągły przycisk</a></li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-        <li class="list-item">
-            <a href=""></a>
-        </li>
-    </ul>
+    <div class="main-list">
+        <ul>
+            <li class="list-item">
+                <a href="0-srodkowanie-tekstu/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="1-srodkowanie/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="2-okragly-przycisk-fa/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="3-gradient-tencza/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="4-rwd-video-100procent/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="5-font-awesome-list/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="6-kolor-placeholdera/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="7-kolory-linkow-dla-typow-plikow/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="8-cytaty/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="9-fixed-footer/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="10-powiekszanie-tla/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="11-animacja-serce/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="12-kurtyna/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="13-background-parallax/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="14-4-columns/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="15-css-flip/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="16-predloader/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="DODATKOWE/18-hover-buttons/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="DODATKOWE/17-hover-info-box/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+            <li class="list-item">
+                <a href="19-licznik/"><i class="fa fa-home fa-fw"></i></a>
+            </li>
+        </ul>
+    </div>
+       
+       <div class="main-list">
+        <ul>
+            <li class="list-item">
+                <a href="0-srodkowanie-tekstu/index.html">środkowanie tekstu w pionie i poziomie</a>
+            </li>
+            <li class="list-item">
+                <a href="1-srodkowanie/index.html">środkowanie elemntów</a>
+            </li>
+            <li class="list-item">
+                <a href="2-okragly-przycisk-fa/index.html">okrągły przycisk</a>
+            </li>
+            <li class="list-item">
+                <a href="3-gradient-tencza/index.html">gradient tęcza</a>
+            </li>
+            <li class="list-item">
+                <a href="4-rwd-video-100procent/index.html">RWD video 100%</a>
+            </li>
+            <li class="list-item">
+                <a href="5-font-awesome-list/index.html">font awesome list</a>
+            </li>
+            <li class="list-item">
+                <a href="6-kolor-placeholdera/index.html">placeholder color</a>
+            </li>
+            <li class="list-item">
+                <a href="7-kolory-linkow-dla-typow-plikow/index.html">kolor linków dla różnych typów plików</a>
+            </li>
+            <li class="list-item">
+                <a href="8-cytaty/index.html">cytaty</a>
+            </li>
+            <li class="list-item">
+                <a href="9-fixed-footer/index.html">footer - fixed</a>
+            </li>
+            <li class="list-item">
+                <a href="10-powiekszanie-tla/index.html">powiększanie tła</a>
+            </li>
+            <li class="list-item">
+                <a href="11-animacja-serce/index.html">animacja serce</a>
+            </li>
+            <li class="list-item">
+                <a href="12-kurtyna/index.html">kurtyna</a>
+            </li>
+            <li class="list-item">
+                <a href="13-background-parallax/index.html">background paralax</a>
+            </li>
+            <li class="list-item">
+                <a href="14-4-columns/index.html">4 columns layout</a>
+            </li>
+            <li class="list-item">
+                <a href="15-css-flip/index.html">css flip boxes</a>
+            </li>
+            <li class="list-item">
+                <a href="16-predloader/index.html">preloader</a>
+            </li>
+            <li class="list-item">
+                <a href="DODATKOWE/18-hover-buttons/index.html">hover buttons</a>
+            </li>
+            <li class="list-item">
+                <a href="DODATKOWE/17-hover-info-box/index.html">hover info box</a>
+            </li>
+            <li class="list-item">
+                <a href="19-licznik/index.html">licznik</a>
+            </li>
+        </ul>
+    </div>
     
+
 </body>
 
 </html>
